# chachacha

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: show_asm.rs  speed.rs
src/: chacha.rs  chacha_reference.rs  lib.rs  neon.rs  rounds.rs  soft.rs  sse2.rs  util.rs  variations.rs
src/backends/: avx2.rs  avx512.rs  mod.rs  neon.rs  soft.rs  sse2.rs
