[package]
name = "chachacha"
version = "0.4.2"
edition = "2024"
description = "SIMD optimized implementations of the Chacha stream cipher"
documentation = "https://docs.rs/chachacha"
repository = "https://github.com/silverstillisntgold/chachacha"
categories = ["algorithms", "cryptography", "no-std"]
keywords = ["chacha", "cipher", "simd"]
license = "MIT"
rust-version = "1.89"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-if = "1"

[dev-dependencies]
ya-rand = { version = "2", default-features = false, features = ["secure"] }
